# Ansmine

./: .gitignore  CDist.txt  CMakeLists.txt  Makefile  login.ui
cmake/: FindQJson.cmake
resources/: ansmine.qrc.depends  digaku-logo.icns
src/: ansmine.cpp  ansmine.hpp  ansmine_main.cpp  ansmined_main.cpp  config.hpp  config.hpp.in  gethub.cpp  gethub.hpp  issue.cpp  issue.hpp  login.cpp  login.hpp  redmine.cpp  redmine.hpp  redmine_model.cpp  redmine_model.hpp  separate_class.hpp  settings_chat.cpp  settings_chat.hpp  tray.cpp  tray.hpp
ui/: login.ui  main.ui
