CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

PROJECT(Ansmine)

SET(VERSION_MAJOR		0)
SET(VERSION_MINOR		0)
SET(VERSION_REVISION 	1)

CONFIGURE_FILE(src/config.hpp.in src/config.hpp)

FIND_PACKAGE(Qt4 COMPONENTS QtCore QtGui QtNetwork REQUIRED)
FIND_PACKAGE(QJson REQUIRED)

INCLUDE(${QT_USE_FILE})

MESSAGE(STATUS "qjson inc: ${QJSON_INCLUDE_DIR}")
MESSAGE(STATUS "qjson lib: ${QJSON_LIBRARY}")
MESSAGE(STATUS "qjson libs: ${QJSON_LIBRARIES}")
MESSAGE(STATUS "qt libs:" ${QT_LIBRARIES})

SET( SOURCES 
	src/ansmine.hpp
	src/ansmine.cpp
	src/ansmine_main.cpp
	src/ansmined_main.cpp
	)

INCLUDE_DIRECTORIES(
	src
	${QJSON_INCLUDE_DIR}
	)


IF( APPLE )
	SET(PROGNAME Ansmine)
	ADD_EXECUTABLE(${PROGNAME} MACOSX_BUNDLE ${SOURCES})
ELSE( APPLE )
	SET(PROGNAME ansmine)
	ADD_EXECUTABLE(${PROGNAME} ${SOURCES})
ENDIF( APPLE )

TARGET_LINK_LIBRARIES(${PROGNAME} 
	${QT_LIBRARIES}
	${QJSON_LIBRARY}
	)


